--- a/css/style.css
+++ b/css/style.css
@@ -20,14 +20,14 @@ li{
 }
 .login_btn{
     background-color: transparent;
-    color: #000;
+    color: #fff;
     font-weight: 500;
     border-radius: 50px;
     padding: .4rem 1rem;
-    border: 1px solid rgb(107, 76, 143);
+    border: 1px solid #50d1c0;
     display: inline-block;
     cursor: pointer;
-    box-shadow: inset 0 0 0 0 rgb(107, 76, 143);
+    box-shadow: inset 0 0 0 0 #50d1c0;
     -webkit-transition: ease-out 0.4s;
     -moz-transition: ease-out 0.4s;
     transition: ease-out 0.4s;
@@ -46,7 +46,7 @@ li{
  font-weight: 500;
  text-decoration: none;
  color: #FFF;
- text-shadow: 2px 2px black;
+ /* text-shadow: 2px 2px black; */
 }
 .home_marquee a:hover{
  text-decoration: none;
@@ -54,11 +54,11 @@ li{
  font-weight: 500;
  text-decoration: none;
  color: #FFF;
- text-shadow: 2px 2px black;
+ /* text-shadow: 2px 2px black; */
 }
 
 .nav_two{
-    background-color: #bb9fdd;
+    background-color: #6B4C8F;
 }
 .country_flags{
     padding: .5rem 1rem;
@@ -100,7 +100,7 @@ li{
     padding-bottom: 2rem;*/
     width: 100%;
     height: 100vh;
-    background-image:linear-gradient(rgba(0,168,255,0.3), rgba(0,168,255,0.3)), url('../images/ATTArmenia_files/pexels-pixabay-355747.jpg');
+    background-image:linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.5)), url('../images/ATTArmenia_files/pexels-pixabay-355747.jpg');
     background-size: 100% 100%;
     background-repeat: no-repeat;
     /* clip-path: polygon(0 0, 100% 0, 100% 75%, 50% 100%, 0 75%); */
@@ -135,7 +135,13 @@ li{
     0%{
         width: 0ch;
     }
+    25%{
+        width: 3ch;
+    }
     50%{
+        width: 15ch;
+    }
+    100%{
         width: 30ch;
     }
 }
@@ -147,7 +153,7 @@ li{
     border-right: 3px solid #fff;
     text-align: center;
     color: #FFF;
-    text-shadow: 2px 2px black;
+    /* text-shadow: 2px 2px black; */
     padding-top:1rem;
     font-size: 45px;
     margin-top: 8rem;
@@ -392,10 +398,20 @@ transition: 1s;
 .main_blog_car_content3{
     width: 20%;
 }
+.main_blog_car_content1 img{
+    width: 8rem;
+    height: 8rem;
+    border-radius: 50%;
+    border: 3px solid #50d1c0;
+}
 
 .fixed{
     position: fixed!important;
     top:0!important;
     left:0!important;
     width: 100%;
+}
+
+.coool img{
+    height: 8rem!important;
 }
