--- a/css/style.css
+++ b/css/style.css
@@ -457,6 +457,19 @@ transition: 2s;
     display: none!important;
 }
 
+/* -----------------Footer------------------------ */
+.footer_grand{
+    background-color: #6B4C8F;
+}
+.footer_main{
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+.footer_main_child h5{
+    color: #FFF;
+}
+
 
 @media only screen and (max-width: 768px){
     html{
@@ -544,4 +557,364 @@ transition: 2s;
         
 }
 
+
+
+/* BANNER CSS */
+
+.home_main_car .cool img::after{
+    content: "";
+    width: 100;
+    height: 100vh;
+    background-image: url('images/preview.png')!important;
+    background-size: 100% 100%!important;
+    background-position: center!important;
+    z-index: 100000000!important;
+}
+
+.clock{
+    font-size: 3rem;
+    width: auto;
+    text-align: center;
+    position: absolute;
+    bottom: 8%;
+    left: 2%;
+    z-index: 100;
+    color: #fff;
+   }
+   #curr_date{
+    font-size: 3rem;
+    width: auto;
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    left: 2%;
+    z-index: 100;
+    color: #fff;
+   }
+.desk-home-owl_sta-car .owl-nav button:hover{
+   color: #000!important;
+   background: transparent!important;
+   }
+   .desk-home-owl_sta-car .owl-nav button i{
+       font-size: 3rem;
+       }
+   .desk-home-owl_sta-car .owl-nav button.owl-prev{
+       color: #FFF!important;
+       position: absolute;
+       top: 45%;
+       left: 3%;
+   }
+   .desk-home-owl_sta-car .owl-nav button.owl-next{
+       color: #FFF!important;
+       position: absolute;
+       top: 45%;
+       right: 3%;
+   }
+
+   .desk-home-owl_sta-car .owl-dots{
+       position: absolute;
+       bottom: 5%;
+       left: 50%;
+       transform: translateX(-50%);
+   }
+
+   .desk-home-owl_sta-car .owl-dots span{
+       border: 2px solid white;
+       background: transparent!important;
+   }
+
+   .desk-home-owl_sta-car .owl-dots .owl-dot.active span{
+       border: 2px solid white;
+       background: white!important;
+   }
+   .desk-home-owl_sta-car .owl-dots{
+       zoom: 1.3;
+   }
+
+   .header_mapfix_img{
+       width: 33%!important;height: 50%!important; position: fixed;z-index: 99; top: 75%;left: 50%;transform: translate(-50%,-75%);
+   }
+   .header_mapfix_logo{
+       position: fixed; top: 1%;left: 1%;z-index: 99;width: 13rem;    
+   }
+   .header_mapfix_head{
+       position: fixed; top: 5%;left: 50%;transform: translateX(-50%);z-index: 99;font-weight: 500;  color: #FFF;width: 100%;text-align: center;    
+   }
+   .header_mapfix_subhead{
+       position: fixed; top: 15%;left: 50%;transform: translateX(-50%);z-index: 99;cursor:pointer;font-weight: 500; color: #FFF;width: 100%;text-align: center;    
+   }
+   .link_one{
+       position: fixed; text-align: center; bottom: 15%;left: 50%;transform: translateX(-50%);z-index: 99;font-weight: 500; color: #FFF;font-size: 1.1rem;
+   }
+   .link_two{
+       position: fixed; text-align: center; top: 30%;left: 50%;transform: translateX(-50%);z-index: 99;font-weight: 500; color: #FFF;font-size: 1.1rem;
+   }
+   .link_three{
+       position: fixed; bottom: 25%; left: 10%;z-index: 99;font-weight: 500; color: #FFF;font-size: 1.1rem;
+   }
+   .link_four{
+       position: fixed; bottom: 35%; left: 10%;z-index: 99;font-weight: 500; color: #FFF;font-size: 1.1rem;        
+   }
+   .link_five{
+       position: fixed; bottom: 45%; left: 10%;z-index: 99;font-weight: 500; color: #FFF;font-size: 1.1rem;        
+   }
+   .link_six{
+       position: fixed; bottom: 55%; left: 10%;z-index: 99;font-weight: 500; color: #FFF;font-size: 1.1rem;        
+   }
+   .link_seven{
+       position: fixed;text-align: right; bottom: 25%; right: 12%;z-index: 99;font-weight: 500; color: #FFF;font-size: 1.1rem;        
+   }
+   .link_eight{
+       position: fixed;text-align: right; bottom: 35%; right: 12%;z-index: 99;font-weight: 500; color: #FFF;font-size: 1.1rem;        
+   }
+   .link_nine{
+       position: fixed;text-align: right; bottom: 45%; right: 12%;z-index: 99;font-weight: 500; color: #FFF;font-size: 1.1rem;        
+   }
+   .link_ten{
+       position: fixed;text-align: right; bottom: 55%; right: 12%;z-index: 99;font-weight: 500; color: #FFF;font-size: 1.1rem;        
+   }
+   .header a:hover{
+       color: white;
+       text-decoration: none;
+
+   }
+   
+    /* .header:before{
+       content: "";
+       position: absolute;
+       top: 0;
+       bottom: 0;
+       left: 0;
+       right: 0;
+       z-index: 2;
+       opacity: 0.7;
+       background:#16c9f6;
+   }
+
+   .crousel_child:before{
+       content: "";
+       position: absolute;
+       top: 0;
+       bottom: 0;
+       left: 0;
+       right: 0;
+       z-index: 2;
+       opacity: 0.7;
+       background:#16c9f6;
+   }  */
+   .header_mapfix_head {
+       animation: linear;
+       animation-name: run;
+       animation-duration: 3s;
+     }
+
+     .header_mapfix_subhead{
+       animation: linear;
+       animation-name: run2;
+       animation-duration: 3s;  
+     }
+     .wow_left{
+       animation: linear;
+       animation-name: run3;
+       animation-duration: 3s;   
+     }
+     .wow_right{
+       animation: linear;
+       animation-name: run4;
+       animation-duration: 3s;   
+     }
+     .wow_up{
+       animation: linear;
+       animation-name: run5;
+       animation-duration: 3s; 
+     }
+     .wow_down{
+       animation: linear;
+       animation-name: run6;
+       animation-duration: 3s; 
+     }
+
+     @keyframes run {
+       0% {
+         /* transform: translateY(-25%); */
+         top: -25%;
+       }
+       50% {
+           /* transform: translateY(5%);    */
+           top: 5%;
+       }
+     }
+
+     @keyframes run2 {
+       0% {
+         /* transform: translateX(20%); */
+         top: -15%;
+       }
+       50% {
+           /* transform: translateX(-50%);    */
+           top: 15%;
+       }
+     }
+
+     @keyframes run3 {
+       0% {
+         left: -16%;
+       }
+       50% {
+           left: 10%;   
+       }
+     }
+
+     @keyframes run4 {
+       0% {
+         right: -23%;
+       }
+       50% {
+           right: 12%;   
+       }
+     }
+
+     @keyframes run5 {
+       0% {
+         top: -2%;
+       }
+       50% {
+           top: 30%;   
+       }
+     }
+
+     @keyframes run6 {
+       0% {
+         bottom: -2%;
+       }
+       50% {
+           bottom: 15%;   
+       }
+     }
+
+     .item .cool::after{
+         content: "";
+         position: absolute;
+         top: 0;
+         left: 0;
+         right: 0;
+         bottom: 0;
+         background: rgba(0, 0, 0, 0.5)!important;
+     }
+
+
+     @media only screen and (max-width: 768px){
+       html{
+           font-size: 13px;
+       }
+
+           .header_mapfix_img{
+       width: 80%!important;height: 40%!important; position: fixed;z-index: 99; top: 75%;left: 50%;transform: translate(-50%,-75%);
+   }
+   .header_mapfix_logo{
+       position: fixed; top: -1%;left: -5%;    
+   }
+   .header_mapfix_head{
+       top: 11%;left: 50%;font-size: 1.9rem;    
+   }
+   .header_mapfix_subhead{
+       top: 20%;left: 50%;   
+   }
+
+   .link_two{
+       top: 28%;       
+   }
+   .link_three{
+       left: 2%;       
+   }
+   .link_four{
+       left: 2%;        
+   }
+   .link_five{
+       left: 2%;        
+   }
+   .link_six{
+       left: 2%;        
+   }
+   .link_seven{
+       right: 2%;       
+   }
+   .link_eight{
+       right: 2%;        
+   }
+   .link_nine{
+       right: 2%;        
+   }
+   .link_ten{
+       right: 2%;       
+   }
+
+
+.link_one, .link_two, .link_three, .link_four, .link_five, .link_six, .link_seven, .link_eight, .link_nine, .link_ten{
+   max-width: 150px;
+   word-wrap: break-word;
+   font-size: 1.2rem;
+}
+   .desk-home-owl_sta-car .owl-nav{
+    display: none!important;
+   }
+   .desk-home-owl_sta-car .owl-dots{
+    bottom: 0;
+   }
+   .clock{
+    font-size: 2rem;
+    bottom: 9%;
+   }
+   #curr_date{
+    font-size: 2rem;
+    bottom: 5%;
+   }
+
+    @keyframes run {
+       0% {
+         top: -25%;
+       }
+       50% {
+           top: 11%;
+       }
+     }
+
+     @keyframes run2 {
+       0% {
+         top: -15%;
+       }
+       50% {
+           top: 20%;
+       }
+     }
+
+     @keyframes run3 {
+       0% {
+         left: -16%;
+       }
+       50% {
+           left: 2%;   
+       }
+     }
+
+     @keyframes run4 {
+       0% {
+         right: -23%;
+       }
+       50% {
+           right: 2%;   
+       }
+     }
+
+     @keyframes run5 {
+       0% {
+         top: -2%;
+       }
+       50% {
+           top: 28%;   
+       }
+     }
+
+
+     }
 
