--- a/css/style.css
+++ b/css/style.css
@@ -465,9 +465,25 @@ transition: 2s;
     display: flex;
     justify-content: space-around;
     width: 100%;
+    padding: 2rem .5rem;
 }
 .footer_main_child h5{
     color: #FFF;
+}
+
+.footer_main_child > a{
+    display: block;
+    color: #FFF;
+    text-decoration: none;
+}
+.footer_main_child > a:hover{
+    color: #50d1c0;
+    text-decoration: none;
+}
+.footer_social_img{
+    width: 2rem;
+    height: 1.8rem;
+    margin-right: .5rem;
 }
 
 
